workig on mobile styling issues

--- a/css/style-small.css
+++ b/css/style-small.css
@@ -36,9 +36,7 @@
 		padding: 6em 2em 6em 2em;
 	}
 
-		#banner br {
-			display: none;
-		}
+	
 
 		#banner h2 {
 			font-size: 2.25em;
